[package]
name = "matching-engine"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1.0.102"
axum = { version = "0.8.9", features = ["macros", "ws"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.52.1", features = ["full"] }
tracing = "0.1.44"
tracing-subscriber = "0.3.23"
